todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3d-k3s-default-agent-0
      containers:
        - name: todo-app
          image: todo-app:2.2
          imagePullPolicy: Never

          volumeMounts:
            - name: image-cache
              mountPath: /cache
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-image-pvc
---
